# iqx-dockmonitor

./: .gitignore  Cargo.toml  LICENSE  README.md  Rust - Dock Monitor.txt  notes2.py
src/: config.rs  errors.rs  init.rs  lib.rs  main.rs
src/alerting/: alert_manager.rs  mod.rs
src/analysis/: context_analyzer.rs  mod.rs
src/controllers/: dock_door.rs  mod.rs
src/event_handling/: event_handler.rs  mod.rs
src/models/: consolidated_dock_event.rs  idb_log.rs  idoor.rs  ievents.rs  isensor.rs  istates.rs  istatus.rs  mod.rs  plcvalue.rs
src/monitoring/: mod.rs  monitoring_queue.rs  monitoring_worker.rs
src/repositories/: consolidated.rs  door_event_repository.rs  mod.rs  repository_trait.rs  wms_status_repository.rs
src/rules/: consolidated_data_rule.rs  dock_ready_rule.rs  docking_state_rule.rs  dynamic_rule_manager.rs  long_loading_start_rule.rs  manual_intervention_rule.rs  mod.rs  new_shipment_old_trailer_rule.rs  rule_factory.rs  shipment_started_load_not_ready_rule.rs  suspended_door_rule.rs  trailer_at_door_db.rs  trailer_docking_rule.rs  trailer_hostage_rule.rs  trailer_pattern_rule.rs  trailer_undocking_rule.rs  wms_events_rule.rs  wms_shipment_status_rule.rs
src/services/: db.rs  mod.rs
src/services/dbc/: database_client.rs  mod.rs
src/services/plc/: mod.rs  plc_reader.rs  (+3 more)
src/state_management/: command_processor.rs  database_event_manager.rs  door_state_repository.rs  event_dispatcher.rs  mod.rs  sensor_data_processor.rs  state_manager.rs  state_manager_lifecycle.rs  wms_data_processor.rs
src/utils/: logging.rs  mod.rs
tests/: rule_tests.rs
