[package]
name = "iqx-dockmonitor"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
plctag = "0.4.0"
config = "0.14.0"
serde = { version = "1.0.205", features = ["derive"] }
thiserror = "1.0.63"
sqlx-oldapi = {version = "0.6.23", features = ["mssql", "macros", "sqlx-macros", "runtime-tokio-native-tls", "chrono"]}
lapin = {version = "2.5.0", features = ["native-tls"]}
serde_json = "1.0.122"
chrono = {version = "0.4.38", features = ["serde"]}
futures = "0.3.30"
parking_lot = "0.12.3"
secrecy = "0.8.0"
url = "2.5.2"
derive_more = {version = "1.0.0", features = ["full"]}
time = "0.3.36"
async-trait = "0.1.81"
reqwest = { version = "0.12.7", features = ["json"] }
dashmap = { version =  "6.1.0", features = ["serde", "rayon", "inline"] }
rayon = "1.10.0"
log = "0.4.22"
log4rs = {version = "1.3.0", features = ["rolling_file_appender","serde", "chrono","file_appender", "fixed_window_roller", "console_appender", "gzip", "background_rotation"]}

[profile.release]
debug = true
